manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 82273952-svc
spec:
  ports:
    - port: 8080
  selector:
    app: "tttt"
